file structure fixed
fixed file structure for easy navigation

--- a/TipsyBean/pages/customer/login.html
+++ b/TipsyBean/pages/customer/login.html
@@ -14,13 +14,13 @@
   />
 
   <!-- Normalize CSS -->
-  <link rel="stylesheet" href="../css/normalize.css" />
+  <link rel="stylesheet" href="../../css/common/normalize.css" />
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../../css/common/style.css" />
 
   <!-- Login Page Styles -->
-  <link rel="stylesheet" href="../css/login.css" />
+  <link rel="stylesheet" href="../../css/pages/login.css" />
 
   <!-- Google Fonts -->
   <link
@@ -35,7 +35,7 @@
     <div class="login-card">
       <!-- Logo -->
       <div class="logo-login">
-        <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" />
+        <img src="../../assets/images/logo/logo.jpeg" alt="Tipsy Bean Logo" />
       </div>
 
       <!-- Title -->
@@ -106,10 +106,10 @@
   ></script>
 
   <!-- Session Manager -->
-  <script src="../script/session.js"></script>
+  <script src="../../script/common/session.js"></script>
 
   <!-- Login Module -->
-  <script src="../script/login.js"></script>
+  <script src="../../script/pages/login.js"></script>
 
   <script>
     // Redirect to profile if already logged in
