--- a/TipsyBean/pages/customer/menu.html
+++ b/TipsyBean/pages/customer/menu.html
@@ -13,16 +13,16 @@
   />
 
   <!-- Normalize CSS -->
-  <link rel="stylesheet" href="../css/normalize.css" />
+  <link rel="stylesheet" href="../../css/common/normalize.css" />
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../../css/common/style.css" />
 
   <!-- Menu Page Styles -->
-  <link rel="stylesheet" href="../css/menu.css" />
+  <link rel="stylesheet" href="../../css/pages/menu.css" />
 
   <!-- Floating Cart Styles -->
-  <link rel="stylesheet" href="../css/floating-cart.css" />
+  <link rel="stylesheet" href="../../css/common/floating-cart.css" />
 
   <!-- Google Fonts -->
   <link
@@ -44,8 +44,8 @@
     <nav class="navbar navbar-expand-lg bg-dark fixed-top custom-navbar" role="navigation">
       <div class="container-fluid px-4">
         <!-- Logo + Brand -->
-        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="../../index.html" aria-label="Tipsy Bean Home">
-          <img src="../assets/logo.jpeg" alt="Tipsy Bean Coffee Shop Logo" class="logo-img me-2" id="logo-img" />
+        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="/index.html" aria-label="Tipsy Bean Home">
+          <img src="../../assets/images/logo/logo.jpeg" alt="Tipsy Bean Coffee Shop Logo" class="logo-img me-2" id="logo-img" />
           Tipsy Bean
         </a>
 
@@ -66,10 +66,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto text-center" role="menubar">
             <li class="nav-item" role="none">
-              <a class="nav-link text-white px-3" href="../../index.html" role="menuitem">Home</a>
+              <a class="nav-link text-white px-3" href="/index.html" role="menuitem">Home</a>
             </li>
             <li class="nav-item" role="none">
-              <a class="nav-link text-white px-3" href="../../index.html#about-section" role="menuitem">About</a>
+              <a class="nav-link text-white px-3" href="/index.html#about-section" role="menuitem">About</a>
             </li>
             <li class="nav-item" role="none">
               <a class="nav-link text-white px-3" href="#" role="menuitem">Menu</a>
@@ -127,7 +127,7 @@
         <h3 class="menu-subsection-title">Hot Beverages</h3>
         <div class="menu-items-grid">
           <div class="menu-item" data-item-id="hot-americano" data-item-name="Hot Americano" data-item-price="90">
-            <img src="../assets/hot-americano.jpg" alt="Hot Americano - espresso with hot water" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/hot-americano.jpg" alt="Hot Americano - espresso with hot water" class="menu-item-image" />
             <h4 class="menu-item-name">Hot Americano</h4>
             <p class="menu-item-price">₱90</p>
             <p class="menu-item-description">Rich and bold espresso topped with hot water for a smooth, authentic coffee experience.</p>
@@ -139,7 +139,7 @@
           </div>
 
           <div class="menu-item" data-item-id="hot-latte" data-item-name="Hot Latte" data-item-price="130">
-            <img src="../assets/hot-latte.jpg" alt="Hot Latte - espresso with steamed milk" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/hot-latte.jpg" alt="Hot Latte - espresso with steamed milk" class="menu-item-image" />
             <h4 class="menu-item-name">Hot Latte</h4>
             <p class="menu-item-price">₱130</p>
             <p class="menu-item-description">Creamy and smooth espresso combined with silky steamed milk and a touch of foam.</p>
@@ -151,7 +151,7 @@
           </div>
 
           <div class="menu-item" data-item-id="hot-caramel-mach" data-item-name="Hot Caramel Macchiato" data-item-price="160">
-            <img src="../assets/hot-caramel-mach.jpg" alt="Hot Caramel Macchiato - espresso with caramel" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/hot-caramel-mach.jpg" alt="Hot Caramel Macchiato - espresso with caramel" class="menu-item-image" />
             <h4 class="menu-item-name">Hot Caramel Macchiato</h4>
             <p class="menu-item-price">₱160</p>
             <p class="menu-item-description">Espresso marked with steamed milk and topped with rich caramel sauce for a sweet indulgence.</p>
@@ -167,7 +167,7 @@
         <h3 class="menu-subsection-title">Iced Beverages</h3>
         <div class="menu-items-grid">
           <div class="menu-item" data-item-id="iced-americano" data-item-name="Iced Americano" data-item-price="100">
-            <img src="../assets/iced-americano.jpg" alt="Iced Americano - cold espresso refresher" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/iced-americano.jpg" alt="Iced Americano - cold espresso refresher" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Americano</h4>
             <p class="menu-item-price">₱100</p>
             <p class="menu-item-description">Crisp and refreshing espresso poured over ice and water for the perfect cold coffee.</p>
@@ -179,7 +179,7 @@
           </div>
 
           <div class="menu-item" data-item-id="iced-latte" data-item-name="Iced Latte" data-item-price="140">
-            <img src="../assets/iced-latte.jpg" alt="Iced Latte - cold coffee with milk" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/iced-latte.jpg" alt="Iced Latte - cold coffee with milk" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Latte</h4>
             <p class="menu-item-price">₱140</p>
             <p class="menu-item-description">Cool and creamy espresso with cold milk and ice, perfect for warm days.</p>
@@ -191,7 +191,7 @@
           </div>
 
           <div class="menu-item" data-item-id="iced-caramel-mach" data-item-name="Iced Caramel Macchiato" data-item-price="170">
-            <img src="../assets/iced-caramel-mach.jpg" alt="Iced Caramel Macchiato - cold coffee with caramel" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/iced-caramel-mach.jpg" alt="Iced Caramel Macchiato - cold coffee with caramel" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Caramel Macchiato</h4>
             <p class="menu-item-price">₱170</p>
             <p class="menu-item-description">Chilled espresso with creamy milk and delicious caramel for a sweet refreshment.</p>
@@ -203,7 +203,7 @@
           </div>
 
           <div class="menu-item" data-item-id="iced-matcha-latte" data-item-name="Iced Matcha Latte" data-item-price="190">
-            <img src="../assets/iced-matcha-latte.jpg" alt="Iced Matcha Latte - cold matcha green tea drink" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/iced-matcha-latte.jpg" alt="Iced Matcha Latte - cold matcha green tea drink" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Matcha Latte</h4>
             <p class="menu-item-price">₱190</p>
             <p class="menu-item-description">Smooth and earthy matcha green tea blended with cold milk and ice for a healthier option.</p>
@@ -215,7 +215,7 @@
           </div>
 
           <div class="menu-item" data-item-id="iced-spanish-latte" data-item-name="Iced Spanish Latte" data-item-price="150">
-            <img src="../assets/iced-spanish-latte.jpg" alt="Iced Spanish Latte - cold coffee with sweetened milk" class="menu-item-image" />
+            <img src="../../assets/images/products/coffee/iced-spanish-latte.jpg" alt="Iced Spanish Latte - cold coffee with sweetened milk" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Spanish Latte</h4>
             <p class="menu-item-price">₱150</p>
             <p class="menu-item-description">Refreshing iced espresso with sweetened condensed milk and cold cream for a rich treat.</p>
@@ -236,7 +236,7 @@
         <h3 class="menu-subsection-title">Pasta Dishes</h3>
         <div class="menu-items-grid">
           <div class="menu-item" data-item-id="alfredo-spag" data-item-name="Alfredo Spaghetti" data-item-price="300">
-            <img src="../assets/alfredo-spag.jpg" alt="Alfredo Spaghetti - creamy pasta with alfredo sauce" class="menu-item-image" />
+            <img src="../../assets/images/products/pasta/alfredo-spag.jpg" alt="Alfredo Spaghetti - creamy pasta with alfredo sauce" class="menu-item-image" />
             <h4 class="menu-item-name">Alfredo Spaghetti</h4>
             <p class="menu-item-price">₱300</p>
             <p class="menu-item-description">Tender spaghetti coated in a rich and creamy Alfredo sauce, topped with Parmesan cheese.</p>
@@ -248,7 +248,7 @@
           </div>
 
           <div class="menu-item" data-item-id="bolognese-spag" data-item-name="Bolognese Spaghetti" data-item-price="310">
-            <img src="../assets/bolognese-spag.jpg" alt="Bolognese Spaghetti - pasta with meat sauce" class="menu-item-image" />
+            <img src="../../assets/images/products/pasta/bolognese-spag.jpg" alt="Bolognese Spaghetti - pasta with meat sauce" class="menu-item-image" />
             <h4 class="menu-item-name">Bolognese Spaghetti</h4>
             <p class="menu-item-price">₱310</p>
             <p class="menu-item-description">Classic spaghetti with a hearty and flavorful Bolognese meat sauce made from quality ingredients.</p>
@@ -260,7 +260,7 @@
           </div>
 
           <div class="menu-item" data-item-id="basil-spag" data-item-name="Basil Spaghetti" data-item-price="290">
-            <img src="../assets/basil-spag.jpg" alt="Basil Spaghetti - fresh pasta with basil" class="menu-item-image" />
+            <img src="../../assets/images/products/pasta/basil-spag.jpg" alt="Basil Spaghetti - fresh pasta with basil" class="menu-item-image" />
             <h4 class="menu-item-name">Basil Spaghetti</h4>
             <p class="menu-item-price">₱290</p>
             <p class="menu-item-description">Fresh and aromatic spaghetti tossed with fragrant basil, olive oil, and a touch of garlic.</p>
@@ -276,7 +276,7 @@
         <h3 class="menu-subsection-title">Pastries & Baked Goods</h3>
         <div class="menu-items-grid">
           <div class="menu-item" data-item-id="croissant" data-item-name="Croissant" data-item-price="95">
-            <img src="../assets/croissant.jpg" alt="Croissant - buttery French pastry" class="menu-item-image" />
+            <img src="../../assets/images/products/pastries/croissant.jpg" alt="Croissant - buttery French pastry" class="menu-item-image" />
             <h4 class="menu-item-name">Croissant</h4>
             <p class="menu-item-price">₱95</p>
             <p class="menu-item-description">Flaky and buttery French croissant, perfect with your favorite coffee for a classic breakfast treat.</p>
@@ -288,7 +288,7 @@
           </div>
 
           <div class="menu-item" data-item-id="blueberry-cheesecake" data-item-name="Blueberry Cheesecake" data-item-price="200">
-            <img src="../assets/blueberry-cheesecake.jpg" alt="Blueberry Cheesecake - creamy cheesecake with blueberries" class="menu-item-image" />
+            <img src="../../assets/images/products/pastries/blueberry-cheesecake.jpg" alt="Blueberry Cheesecake - creamy cheesecake with blueberries" class="menu-item-image" />
             <h4 class="menu-item-name">Blueberry Cheesecake</h4>
             <p class="menu-item-price">₱200</p>
             <p class="menu-item-description">Rich and creamy cheesecake topped with fresh tart blueberries for a delightful indulgence.</p>
@@ -300,7 +300,7 @@
           </div>
 
           <div class="menu-item" data-item-id="spandauer" data-item-name="Spandauer" data-item-price="135">
-            <img src="../assets/spandauer.jpg" alt="Spandauer - Danish pastry with filling" class="menu-item-image" />
+            <img src="../../assets/images/products/pastries/spandauer.jpg" alt="Spandauer - Danish pastry with filling" class="menu-item-image" />
             <h4 class="menu-item-name">Spandauer</h4>
             <p class="menu-item-price">₱135</p>
             <p class="menu-item-description">Traditional Danish pastry with a sweet filling, crispy on the outside and soft inside.</p>
@@ -351,14 +351,14 @@
                rel="noopener noreferrer" 
                class="footer-icon-link"
                aria-label="Visit Tipsy Bean Facebook page">
-              <img src="../assets/FacebookIcon.png" alt="Facebook social media icon" class="footer-icon" />
+              <img src="../../assets/images/icons/FacebookIcon.png" alt="Facebook social media icon" class="footer-icon" />
             </a>
             <a href="https://www.instagram.com/tipsybeancabuyao/" 
                target="_blank" 
                rel="noopener noreferrer" 
                class="footer-icon-link"
                aria-label="Visit Tipsy Bean Instagram page">
-              <img src="../assets/InstagramIcon.png" alt="Instagram social media icon" class="footer-icon" />
+              <img src="../../assets/images/icons/InstagramIcon.png" alt="Instagram social media icon" class="footer-icon" />
             </a>
           </div>
         </div>
@@ -373,22 +373,22 @@
   ></script>
 
   <!-- Session Manager -->
-  <script src="../script/session.js"></script>
+  <script src="../../script/common/session.js"></script>
 
   <!-- Cart Manager -->
-  <script src="../script/cart.js"></script>
+  <script src="../../script/common/cart.js"></script>
 
   <!-- Menu Cart Integration -->
-  <script src="../script/menu-cart.js"></script>
+  <script src="../../script/pages/menu-cart.js"></script>
 
   <!-- Menu Page Script -->
-  <script src="../script/menu.js"></script>
+  <script src="../../script/pages/menu.js"></script>
   <!-- Menu Search Script -->
-  <script src="../script/menu-search.js"></script>
+  <script src="../../script/pages/menu-search.js"></script>
   <!-- Floating Cart Button -->
   <div class="floating-cart-container">
     <button class="floating-cart-btn" id="floatingCartBtn" title="View Shopping Cart">
-      <img src="../assets/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
+      <img src="../../assets/images/icons/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
       <span class="floating-cart-badge" id="floatingCartBadge" style="display: none;"></span>
     </button>
   </div>
