--- a/TipsyBean/pages/customer/order-confirmation.html
+++ b/TipsyBean/pages/customer/order-confirmation.html
@@ -12,15 +12,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/order-confirmation.css">
+  <link rel="stylesheet" href="../../css/common/normalize.css">
+  <link rel="stylesheet" href="../../css/common/style.css">
+  <link rel="stylesheet" href="../../css/pages/order-confirmation.css">
 </head>
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../../index.html">
+      <a class="navbar-brand" href="/index.html">
         TipsyBean
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -155,7 +155,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Custom Scripts -->
-  <script src="../script/session.js"></script>
-  <script src="../script/order-confirmation.js"></script>
+  <script src="../../script/common/session.js"></script>
+  <script src="../../script/pages/order-confirmation.js"></script>
 </body>
 </html>
