--- a/TipsyBean/pages/customer/signup.html
+++ b/TipsyBean/pages/customer/signup.html
@@ -14,13 +14,13 @@
   />
 
   <!-- Normalize CSS -->
-  <link rel="stylesheet" href="../css/normalize.css" />
+  <link rel="stylesheet" href="../../css/common/normalize.css" />
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../../css/common/style.css" />
 
   <!-- Login/Signup CSS -->
-  <link rel="stylesheet" href="../css/login.css" />
+  <link rel="stylesheet" href="../../css/pages/login.css" />
 
   <!-- Google Fonts -->
   <link
@@ -41,8 +41,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-dark fixed-top custom-navbar" role="navigation">
       <div class="container-fluid px-4">
-        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="../../index.html">
-          <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img me-2" />
+        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="/index.html">
+          <img src="../../assets/images/logo/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img me-2" />
           Tipsy Bean
         </a>
         <button
@@ -59,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link text-white" href="../../index.html">Home</a>
+              <a class="nav-link text-white" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="./menu.html">Menu</a>
@@ -249,9 +249,9 @@
   ></script>
 
   <!-- Session Manager -->
-  <script src="../script/session.js"></script>
+  <script src="../../script/common/session.js"></script>
 
   <!-- Signup Script -->
-  <script src="../script/signup.js"></script>
+  <script src="../../script/pages/signup.js"></script>
 </body>
 </html>
