--- a/TipsyBean/pages/admin/admin-dashboard.html
+++ b/TipsyBean/pages/admin/admin-dashboard.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/admin-dashboard.css">
+  <link rel="stylesheet" href="../../css/common/normalize.css">
+  <link rel="stylesheet" href="../../css/common/style.css">
+  <link rel="stylesheet" href="../../css/admin/admin-dashboard.css">
 </head>
 <body>
   <!-- Top Navigation Bar -->
@@ -260,6 +260,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Admin Dashboard Script -->
-  <script src="../script/admin-dashboard.js"></script>
+  <script src="../../script/admin/admin-dashboard.js"></script>
 </body>
 </html>
