--- a/TipsyBean/pages/admin/admin-login.html
+++ b/TipsyBean/pages/admin/admin-login.html
@@ -12,28 +12,28 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../../css/common/normalize.css">
+  <link rel="stylesheet" href="../../css/common/style.css">
+  <link rel="stylesheet" href="../../css/pages/login.css">
 </head>
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="../../index.html">TipsyBean</a>
+      <a class="navbar-brand fw-bold" href="/index.html">TipsyBean</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html">Home</a>
+            <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./menu.html">Menu</a>
+            <a class="nav-link" href="../customer/menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./login.html">User Login</a>
+            <a class="nav-link" href="../customer/login.html">User Login</a>
           </li>
         </ul>
       </div>
@@ -118,7 +118,7 @@
       </div>
 
       <div class="login-footer">
-        <p>Not an admin? <a href="./login.html">Login as User</a></p>
+        <p>Not an admin? <a href="../customer/login.html">Login as User</a></p>
       </div>
     </div>
   </div>
@@ -127,6 +127,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Admin Login Script -->
-  <script src="../script/admin-login.js"></script>
+  <script src="../../script/admin/admin-login.js"></script>
 </body>
 </html>
