--- a/TipsyBean/pages/customer/order-history.html
+++ b/TipsyBean/pages/customer/order-history.html
@@ -12,15 +12,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/order-history.css">
+  <link rel="stylesheet" href="../../css/common/normalize.css">
+  <link rel="stylesheet" href="../../css/common/style.css">
+  <link rel="stylesheet" href="../../css/pages/order-history.css">
 </head>
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="../../index.html">TipsyBean</a>
+      <a class="navbar-brand fw-bold" href="/index.html">TipsyBean</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -97,7 +97,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Custom Scripts -->
-  <script src="../script/session.js"></script>
-  <script src="../script/order-history.js"></script>
+  <script src="../../script/common/session.js"></script>
+  <script src="../../script/pages/order-history.js"></script>
 </body>
 </html>
