--- a/TipsyBean/pages/customer/profile.html
+++ b/TipsyBean/pages/customer/profile.html
@@ -14,16 +14,16 @@
   />
 
   <!-- Normalize CSS -->
-  <link rel="stylesheet" href="../css/normalize.css" />
+  <link rel="stylesheet" href="../../css/common/normalize.css" />
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../../css/common/style.css" />
 
   <!-- Profile Page Styles -->
-  <link rel="stylesheet" href="../css/profile.css" />
+  <link rel="stylesheet" href="../../css/pages/profile.css" />
 
   <!-- Floating Cart Styles -->
-  <link rel="stylesheet" href="../css/floating-cart.css" />
+  <link rel="stylesheet" href="../../css/common/floating-cart.css" />
 
   <!-- Google Fonts -->
   <link
@@ -44,8 +44,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-dark fixed-top custom-navbar" role="navigation">
       <div class="container-fluid px-4">
-        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="../../index.html">
-          <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img me-2" />
+        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="/index.html">
+          <img src="../../assets/images/logo/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img me-2" />
           Tipsy Bean
         </a>
         <button
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link text-white" href="../../index.html">Home</a>
+              <a class="nav-link text-white" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white active" href="#">Profile</a>
@@ -298,21 +298,21 @@
   ></script>
 
   <!-- Session Manager -->
-  <script src="../script/session.js"></script>
+  <script src="../../script/common/session.js"></script>
 
   <!-- Cart Manager -->
-  <script src="../script/cart.js"></script>
+  <script src="../../script/common/cart.js"></script>
 
   <!-- Profile Script -->
-  <script src="../script/profile.js"></script>
+  <script src="../../script/pages/profile.js"></script>
 
   <!-- Profile Page Script -->
-  <script src="../script/profile-page.js"></script>
+  <script src="../../script/pages/profile-page.js"></script>
 
   <!-- Floating Cart Button -->
   <div class="floating-cart-container">
     <button class="floating-cart-btn" id="floatingCartBtn" title="View Shopping Cart">
-      <img src="../assets/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
+      <img src="../../assets/images/icons/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
       <span class="floating-cart-badge" id="floatingCartBadge" style="display: none;"></span>
     </button>
   </div>
