--- a/TipsyBean/pages/customer/checkout.html
+++ b/TipsyBean/pages/customer/checkout.html
@@ -41,7 +41,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-dark fixed-top custom-navbar" role="navigation">
       <div class="container-fluid px-4">
-        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="/index.html">
+        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="../../../index.html">
           <img src="../../assets/images/logo/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img me-2" />
           Tipsy Bean
         </a>
@@ -59,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link text-white" href="/index.html">Home</a>
+              <a class="nav-link text-white" href="../../../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="./menu.html">Menu</a>
