--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container-fluid px-4">
         <!-- Logo + Brand -->
         <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="#home" aria-label="Tipsy Bean Home">
-          <img src="TipsyBean/assets/images/logo/logo.jpeg" alt="Tipsy Bean Coffee Shop Logo" class="logo-img me-2" id="logo-img" />
+          <img src="./TipsyBean/assets/images/logo/logo.jpeg" alt="Tipsy Bean Coffee Shop Logo" class="logo-img me-2" id="logo-img" />
           Tipsy Bean
         </a>
 
@@ -99,7 +99,7 @@
     <section id="home" class="hero text-center">
       <div class="container-fluid p-0">
         <figure class="hero-image-wrapper position-relative m-0">
-          <img src="TipsyBean/assets/images/banners/CoffeeShop Interior.jpg" alt="Cozy coffee shop interior with warm lighting and comfortable seating" class="hero-image img-fluid w-100" />
+          <img src="./TipsyBean/assets/images/banners/CoffeeShop Interior.jpg" alt="Cozy coffee shop interior with warm lighting and comfortable seating" class="hero-image img-fluid w-100" />
           <figcaption class="hero-caption position-absolute top-50 end-0 translate-middle-y text-end pe-4">
             <h1 class="hero-title display-3 fw-bold">Welcome to <span class="latte-title">Tipsy Bean</span></h1>
             <p class="hero-desc fs-5 fw-normal">Your cozy corner for the finest coffee and pastries.</p>
@@ -114,7 +114,7 @@
         <div class="row align-items-center g-4">
           <!-- Image -->
           <div class="col-lg-5 col-md-6 text-center mb-4 mb-md-0">
-            <img src="TipsyBean/assets/images/logo/logo.jpeg" alt="Tipsy Bean coffee shop logo featuring a stylized coffee bean design" class="about-logo img-fluid rounded-circle shadow" />
+            <img src="./TipsyBean/assets/images/logo/logo.jpeg" alt="Tipsy Bean coffee shop logo featuring a stylized coffee bean design" class="about-logo img-fluid rounded-circle shadow" />
           </div>
           <!-- Text -->
           <div class="col-lg-7 col-md-6 text-center text-md-start">
@@ -138,7 +138,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 col-md-10">
-            <img src="TipsyBean/assets/images/icons/pin.png" alt="Location marker pin icon" class="location-pin mb-3" />
+            <img src="./TipsyBean/assets/images/icons/pin.png" alt="Location marker pin icon" class="location-pin mb-3" />
             <h2 class="location-title display-5 fw-bold mb-3">Find your way to us</h2>
             <p class="location-description fs-6 mb-4">
               Looking for your next favorite coffee spot? Use the map below to find our location.
@@ -167,7 +167,7 @@
           <div class="col-xl-4 col-lg-5 col-md-6 col-sm-8">
             <a href="./TipsyBean/pages/customer/menu.html#beverages" class="menu-card-link text-decoration-none">
               <div class="menu-card p-4 h-100 d-flex flex-column justify-content-center align-items-center">
-                <img src="TipsyBean/assets/images/categories/Coffee.png" alt="Coffee and beverages selection including espresso, latte, and specialty drinks" class="menu-img img-fluid rounded-3 mb-3" />
+                <img src="./TipsyBean/assets/images/categories/Coffee.png" alt="Coffee and beverages selection including espresso, latte, and specialty drinks" class="menu-img img-fluid rounded-3 mb-3" />
                 <h3 class="menu-item-title h4 fw-bold">Beverages</h3>
               </div>
             </a>
@@ -175,7 +175,7 @@
           <div class="col-xl-4 col-lg-5 col-md-6 col-sm-8">
             <a href="./TipsyBean/pages/customer/menu.html#food" class="menu-card-link text-decoration-none">
               <div class="menu-card p-4 h-100 d-flex flex-column justify-content-center align-items-center">
-                <img src="TipsyBean/assets/images/categories/Pasta.png" alt="Food selection including pasta, sandwiches, and fresh pastries" class="menu-img img-fluid rounded-3 mb-3" />
+                <img src="./TipsyBean/assets/images/categories/Pasta.png" alt="Food selection including pasta, sandwiches, and fresh pastries" class="menu-img img-fluid rounded-3 mb-3" />
                 <h3 class="menu-item-title h4 fw-bold">Food</h3>
               </div>
             </a>
@@ -206,14 +206,14 @@
                      rel="noopener noreferrer"
                      aria-label="Order Tipsy Bean coffee via Foodpanda delivery service"
                      class="delivery-partner-link">
-                    <img src="TipsyBean/assets/images/icons/FoodPanda.png" alt="Order via FoodPanda delivery service" class="delivery-partner-img" />
+                    <img src="./TipsyBean/assets/images/icons/FoodPanda.png" alt="Order via FoodPanda delivery service" class="delivery-partner-img" />
                   </a>
                   <a href="https://www.grab.com/ph/food/" 
                      target="_blank" 
                      rel="noopener noreferrer"
                      aria-label="Order Tipsy Bean coffee via GrabFood delivery service"
                      class="delivery-partner-link">
-                    <img src="TipsyBean/assets/images/icons/GrabFood.png" alt="Order via GrabFood delivery service" class="delivery-partner-img" />
+                    <img src="./TipsyBean/assets/images/icons/GrabFood.png" alt="Order via GrabFood delivery service" class="delivery-partner-img" />
                   </a>
                 </div>
               </div>
@@ -262,14 +262,14 @@
                rel="noopener noreferrer" 
                class="footer-icon-link"
                aria-label="Visit Tipsy Bean Facebook page">
-              <img src="TipsyBean/assets/images/icons/FacebookIcon.png" alt="Facebook social media icon" class="footer-icon" />
+              <img src="./TipsyBean/assets/images/icons/FacebookIcon.png" alt="Facebook social media icon" class="footer-icon" />
             </a>
             <a href="https://www.instagram.com/tipsybeancabuyao/" 
                target="_blank" 
                rel="noopener noreferrer" 
                class="footer-icon-link"
                aria-label="Visit Tipsy Bean Instagram page">
-              <img src="TipsyBean/assets/images/icons/InstagramIcon.png" alt="Instagram social media icon" class="footer-icon" />
+              <img src="./TipsyBean/assets/images/icons/InstagramIcon.png" alt="Instagram social media icon" class="footer-icon" />
             </a>
           </div>
         </div>
@@ -280,7 +280,7 @@
   <!-- Floating Cart Button -->
   <div class="floating-cart-container">
     <button class="floating-cart-btn" id="floatingCartBtn" title="View Shopping Cart">
-      <img src="./TipsyBean/assets/images/icons/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
+      <img src="././assets/images/icons/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
       <span class="floating-cart-badge" id="floatingCartBadge" style="display: none;"></span>
     </button>
   </div>
