--- a/TipsyBean/pages/admin/admin-login.html
+++ b/TipsyBean/pages/admin/admin-login.html
@@ -20,14 +20,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="/index.html">TipsyBean</a>
+      <a class="navbar-brand fw-bold" href="../../../index.html">TipsyBean</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="../../../index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../customer/menu.html">Menu</a>
