--- a/TipsyBean/pages/customer/menu.html
+++ b/TipsyBean/pages/customer/menu.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg bg-dark fixed-top custom-navbar" role="navigation">
       <div class="container-fluid px-4">
         <!-- Logo + Brand -->
-        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="/index.html" aria-label="Tipsy Bean Home">
+        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="../../../index.html" aria-label="Tipsy Bean Home">
           <img src="../../assets/images/logo/logo.jpeg" alt="Tipsy Bean Coffee Shop Logo" class="logo-img me-2" id="logo-img" />
           Tipsy Bean
         </a>
@@ -66,10 +66,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto text-center" role="menubar">
             <li class="nav-item" role="none">
-              <a class="nav-link text-white px-3" href="/index.html" role="menuitem">Home</a>
+              <a class="nav-link text-white px-3" href="../../../index.html" role="menuitem">Home</a>
             </li>
             <li class="nav-item" role="none">
-              <a class="nav-link text-white px-3" href="/index.html#about-section" role="menuitem">About</a>
+              <a class="nav-link text-white px-3" href="../index.html#about-section" role="menuitem">About</a>
             </li>
             <li class="nav-item" role="none">
               <a class="nav-link text-white px-3" href="#" role="menuitem">Menu</a>
