--- a/TipsyBean/pages/customer/order-history.html
+++ b/TipsyBean/pages/customer/order-history.html
@@ -20,7 +20,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="/index.html">TipsyBean</a>
+      <a class="navbar-brand fw-bold" href="../../../index.html">TipsyBean</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
